--- a/DOM Manipulation/Project 1/style.css
+++ b/DOM Manipulation/Project 1/style.css
@@ -1,6 +1,9 @@
 * {
     /* margin: 0px; */
     /* font-size: 16px; */
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
 }
 
 html {
@@ -11,15 +14,22 @@ body {
     width: 100%;
     min-height: 100vh;
     margin: 0px;
+    background-color: #a39696
 }
 
 #header {
 display: flex;
-    align-items: center;
+width: 80%;
+padding: 5px;
+margin: 20px auto;
+color: #fff;
+border-radius: 5px;
+background-color: #262626;
 }
 
 #header h2 {
-    margin: 80px auto 20px auto;
+    margin: 0 auto;
+    /* margin: 80px auto 20px auto; */
 }
 
 #main-content {
@@ -27,7 +37,10 @@ display: flex;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 30px;
 }
 
