--- a/DOM Manipulation/Project 2/style.css
+++ b/DOM Manipulation/Project 2/style.css
@@ -42,7 +42,7 @@ body {
     left: 50%;
     padding: 10px 20px;
 
-    animation-name: animatemoda;
+    animation-name: animatemodal;
     animation-duration: 0.4s;
 }
 
@@ -54,4 +54,16 @@ body {
     font-size: 2rem;
     cursor: pointer;
     color: #ff0000;
+}
+
+@keyframes animatemodal {
+    from {
+        top: -500px;
+        opacity: 0;
+    }
+
+    to {
+        top: 50%;
+        opacity: 1;
+    }
 }
