--- a/DOM Manipulation/Project 2/style.css
+++ b/DOM Manipulation/Project 2/style.css
@@ -18,7 +18,7 @@ body {
     background: transparent;
     border: solid 2px #000;
     font-size: 1.2rem;
-    transition: 0.5s;
+    transition: .5s;
 }
 
 .open-btn:hover {
