--- a/React Study/project-4/src/App.css
+++ b/React Study/project-4/src/App.css
@@ -35,6 +35,10 @@
     align-items: center;
 }
 
+form {
+    width: 100%;
+}
+
 .inputs {
     width: 100%;
     display: flex;
@@ -49,6 +53,18 @@
     border-radius: 5px;
     font-size: 12px;
     text-indent: 5px;
+}
+
+.checkbox {
+    display: flex;
+    margin-bottom: 20px;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+}
+
+.checkbox > input {
+    margin-right: 10px;
 }
 
 .button {
@@ -66,6 +82,40 @@
     cursor: pointer;
 }
 
+.memeImage {
+    position: relative;
+}
+
 .image {
     width: 100%;
+}
+
+.meme-text {
+    position: absolute;
+    width: 80%;
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0;
+    padding: 0 5px;
+    font-family: impact, sans-serif;
+    font-size: 2em;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+    text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000,
+        -2px 2px 0 #000, 0 2px 0 #000, 2px 0 0 #000, 0 -2px 0 #000,
+        -2px 0 0 #000, 2px 2px 5px #000;
+}
+
+.top-text {
+    top: 0;
+}
+
+.bottom-text {
+    bottom: 0;
+}
+
+.rotate {
+    transform: rotate(180deg);
 }
