--- a/kanban-zustand/src/components/Column.module.css
+++ b/kanban-zustand/src/components/Column.module.css
@@ -8,3 +8,42 @@
     border-radius: 4px;
     padding: 0.5rem;
 }
+
+.titleWrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.titleWrapper button {
+    all: unset;
+    cursor: pointer;
+    padding: 0.5rem;
+    color: black;
+    background: white;
+    border-radius: 4px;
+    height: fit-content;
+}
+
+.titleWrapper button:hover {
+    background: var(--COLOR-GRAY-LIGHT);
+}
+
+.modal {
+    position: absolute;
+    background: rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.modalContent {
+    background:white;
+    position: absolute;
+    z-index: 1;
+    padding: 1rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
