--- a/kanban-zustand/src/components/Task.module.css
+++ b/kanban-zustand/src/components/Task.module.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-top: 0.5rem;
 }
 
 .bottomWrapper {
@@ -22,7 +23,7 @@
 
 .PLANNED {
     background: var(--COLOR-GRAY-LIGHT);
-}   
+}
 
 .ONGOING {
     background: var(--COLOR-ONGOING);
