--- a/kanban-zustand/src/App.module.css
+++ b/kanban-zustand/src/App.module.css
@@ -1,6 +1,6 @@
 .app {
     background-color: var(--COLOR-GRAY);
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: start;
